--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Figuras geometricas</title>
-    <link href="Style-PracticaGeometria.css" rel="stylesheet" />
+    <link href="Css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <!--Encabezado-->
@@ -125,6 +125,6 @@
       <footer class="footer">&copy; 2022 FCC ElianGeometry</footer>
     </div>
 
-    <script src="Practica-Geometria.js"></script>
+    <script src="/Js/Geometria.js"></script>
   </body>
 </html>
